Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@
 </header>
 
 <div class="botones">
-  <button class="btn-receta" onclick="mostrarReceta('muffin')"><span>🧁 Muffin</span></button>
-  <button class="btn-receta" onclick="mostrarReceta('pastel_papa')"><span>🥔 Pastel de Papa</span></button>
-  <button class="btn-receta" onclick="mostrarReceta('brownie')"><span>🍫 Brownie</span></button>
-  <button class="btn-receta" onclick="mostrarReceta('milanesa')"><span>🍖 Milanesa</span></button>
-  <button class="btn-receta" onclick="mostrarReceta('panqueques')"><span>🥞 Panqueques</span></button>
-  <button class="btn-receta" onclick="mostrarReceta('carne_papas')"><span>🥩 Carne con Papas</span></button>
+  <button class="btn-receta" onclick="mostrarReceta('muffin')"><span> Muffin</span></button>
+  <button class="btn-receta" onclick="mostrarReceta('pastel_papa')"><span> Pastel de Papa</span></button>
+  <button class="btn-receta" onclick="mostrarReceta('brownie')"><span> Brownie</span></button>
+  <button class="btn-receta" onclick="mostrarReceta('milanesa')"><span> Milanesa</span></button>
+  <button class="btn-receta" onclick="mostrarReceta('panqueques')"><span> Panqueques</span></button>
+  <button class="btn-receta" onclick="mostrarReceta('carne_papas')"><span> Carne con Papas</span></button>
 </div>
 
 <div class="receta-card" id="receta-container">
